@@ -23,6 +23,7 @@ import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -173,7 +174,7 @@ public class VanillaPackResources implements PackResources {
 				String string2x = path2.relativize(path2x).toString().replaceAll("\\\\", "/");
 				ResourceLocation resourceLocation = ResourceLocation.tryBuild(string, string2x);
 				if (resourceLocation == null) {
-					Util.logAndPauseIfInIde("Invalid path in datapack: %s:%s, ignoring".formatted(string, string2x));
+					Util.logAndPauseIfInIde(String.format(Locale.ROOT, "Invalid path in datapack: %s:%s, ignoring", string, string2x));
 				} else {
 					consumer.accept(resourceLocation);
 				}
