@@ -18,6 +18,7 @@ import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeFormatterBuilder;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import javax.annotation.Nullable;
@@ -149,9 +150,9 @@ public class JfrProfiler implements JvmProfiler {
 					CUSTOM_EVENTS.forEach(recording::enable);
 					recording.setDumpOnExit(true);
 					recording.setToDisk(true);
-					recording.setName("%s-%s-%s".formatted(environment.getDescription(), SharedConstants.getCurrentVersion().getName(), string));
+					recording.setName(String.format(Locale.ROOT, "%s-%s-%s", environment.getDescription(), SharedConstants.getCurrentVersion().getName(), string));
 				});
-				Path path = Paths.get("debug/%s-%s.jfr".formatted(environment.getDescription(), string));
+				Path path = Paths.get(String.format(Locale.ROOT, "debug/%s-%s.jfr", environment.getDescription(), string));
 				if (!Files.exists(path.getParent(), new LinkOption[0])) {
 					Files.createDirectories(path.getParent());
 				}
